Added missing refs.

--- a/COI.tex
+++ b/COI.tex
@@ -1,12 +1,11 @@
 \section{Others -- Collaborators and COIs}
 \label{sec:coi}
-
-\textcolor{red}{currently place holder}
-
-\begin{figure}[ht]
-    \centering\includegraphics[width=1.0\linewidth]{figures/OrganizationalStructure.pdf}
-    
-    \label{fig:coi}
-\end{figure}
+\subsection{Tadashi Ogitsu}
+\subsection{Alfredo Correa}
+\subsection{Xavier Andrade}
+\subsection{Liang Tan}
+\subsection{David Prendergast}
+\subsection{Das Pemmeraju}
+\subsection{Aaron Lindenberg}
 
 \clearpage
