--- a/development.tex
+++ b/development.tex
@@ -1,20 +1,6 @@
 \section{Development And Utilization Of Unique Facilities, Capabilities, Or Approaches}
 \label{sec:development}
-{\small\color{red}
-\begin{itemize}
-\item 3 pages max
-    \item Describe the most important instrumentation, computer codes, and databases purchased or developed for the project and their pertinent capabilities. Provide 
-    \begin{enumerate}
-        \item software release numbers,
-        \item user metric where available,
-        
-        \item citations of the accompanying publication of new software releases.
-        \item Links to software and database download sites should be provided in  \textcolor{red}{separate spreadsheet} (see below).
-        \item Also describe any unique shared facilities (including national user facilities) that have been or will be used for the project, including ALCC or INCITE awards.
-    \end{enumerate}    
-\end{itemize}
 
-}
 
 As requested by the program, one of the central objectives of the first half of the NPNEQ center was the delivery of a performant GPU DFT code to tackle non-perturbative and non-equilibrium phenomena studied by the center.
 This effort performed during the first half of the project culminated in the initial release of the \textsc{inq} code (tagged as \texttt{v0.5} available in \url{https://gitlab.com/npneq/inq/-/releases}).
@@ -40,7 +26,7 @@ Alongside the symposium organization, the \textsc{inq} team will also be present
 
 Finally, we are taking advantage of the LLNL's sponsored Computational Chemistry \& Materials Science Summer Institute 2021 (CCMS).
 CCMS is an intership program attracting about a dozen top students in the area of material.
-This year one of our members (\bf Correa) is director of this program.
+This year one of our members {\bf Correa} is director of this program.
 Invited lecturers include Hardy Gross, one of the pionners of TDDFT.
 Two graduate students (Yifan Yao, Univ. of Illinois Urbana and Rijul Chauhan from Texas A\&M) were accepted to perform \textsc{inq}'s related wotk.
 
