--- a/main.tex
+++ b/main.tex
@@ -44,30 +44,17 @@
 \title{CENTER FOR NON-PERTURBATIVE STUDIES OF FUNCTIONAL MATERIALS UNDER NON-EQUILIBRIUM CONDITIONS\\Computational Materials Sciences Mid-Term Review} % Title
 
 \date{\today} % Date for the report
-\author{Hello}
-% \author{
-% {\bf FWP Number:}  SWC1675 &
-% {\bf Lead Institution:} Lawrence Livermore National Laboratory &
-% {\bf Project Director:}  Tadashi Ogitsu Ph.D. &
-% {\bf Title:}  Senior Staff Scientist &
-% {\bf Phone:}  (925) 422-8511 &
-% {\bf Email:} ogitsu1@llnl.gov &
-% {\bf Partner Institutions:} Lawrence Berkeley National Laboratory & SLAC National Accelerator Laboratory}
+%\author{Hello}
+ \author{
+ {\bf FWP Number:}  SWC1675 &
+ {\bf Lead Institution:} Lawrence Livermore National Laboratory &
+ {\bf Project Director:}  Tadashi Ogitsu Ph.D. &
+ {\bf Title:}  Senior Staff Scientist &
+ {\bf Phone:}  (925) 422-8511 &
+ {\bf Email:} ogitsu1@llnl.gov &
+ {\bf Partner Institutions:} Lawrence Berkeley National Laboratory & SLAC National Accelerator Laboratory}
 
 \maketitle % Inserts the title, author and date
-{\bf\color{red}
-% Notes:
-\begin{itemize}
-    \item Imagine your are a reviewer. Can you find the information relevant for a review criteria easily? Is your explanation clearly and effectively addressing the criteria?
-    \item The Review Documents must be formatted for standard 8.5” by 11” paper with 1-inch margins on all sides and a font that is no smaller than Times New Roman 11pt. Figures, charts, tables, captions, etc., may include text smaller than these requirements as long as it is still legible without magnification.
-    \item Page limits are imposed for sections 1,3-6, which will results in 20 pages total (2. budget is excluded).
-    \item Each major section has to start from the top of page.
-    \item Synergy is critical
-    \item Mention ECN somewhere.
-    \item Check if our paper submitted, type, scope and acknowledgment look good
-    \item Consistency between organization chart and the others need to be checked again
-\end{itemize}
-}
 
 \clearpage
 %----------------------------------------------------------------------------------------
@@ -85,7 +72,6 @@
 \input{organization_chart}
 \input{budget}
 \input{overview}
-% \input{hpc_architecture_and_performance}
 \input{research}
 \input{management}
 \input{development}
