--- a/management.tex
+++ b/management.tex
@@ -1,4 +1,4 @@
-\section{Management Plan \textcolor{red}{2 page max}}
+\section{Management Plan}
 \label{sec:manage}
 
 During the first two years of our project, our essential management strategy was based on the geographical proximity of the team and its fairly small size. We had relatively frequent meetings, through which detail of our approaches were determined based on extensive discussions and consensus building with the shared goal of advancement of ultrafast science through development and distribution of GPU enabled RT-TDDFT software and collaborative research using the software. 
@@ -28,7 +28,7 @@ Testing suites are distributed together with the software in order for the exter
 {\bf Pemmeraju} assumed responsibility in designing and performing \textsc{inq} integration tests.
 
 While our \textsc{inq} software was being developed, the experiments ({\bf Aaron Lindenberg (experimental validation)}) and interpretation ({\bf Liang Tan (interpretation)}) team was tasked to perform more elaborate scientific research that would use \textsc{inq} code when it become available. 
-They assumed responsibilities on designing and conducting theory and experiments collaboratively, which would take full advantage of \textsc{inq} code when it become available. Even though experimental work during the pandemic has been limited, we have collected more experimental data recently, which contain new observations that are forming the basis of planned simulations (Sec.~\ref{sec:2dafm}). \textcolor{red}{(beta-alumina and the new paper?)}. 
+They assumed responsibilities on designing and conducting theory and experiments collaboratively, which would take full advantage of \textsc{inq} code when it become available. Even though experimental work during the pandemic has been limited, we have collected more experimental data recently, which contain new observations that are forming the basis of planned simulations (Sec.~\ref{sec:2dafm}). 
 {\bf Lindenberg}'s PD, {\bf Xiao (0.5~PD)}, very recently started an assistant Professor position at University of Wisconsin, Madison and are planning to continue the collaboration with us on the subject of ultrafast science.
 
 As the experimental validation team was impacted by the pandemic, {\bf Tan} assumed other crucial responsibilities: the development of software for tight-binding coupled spin-electron-ion dynamics to augment our software validation effort at long time- and length-scales. 
@@ -58,16 +58,7 @@ Prof. Emilio Artacho (Cambridge) is scheduled to participate in a discussion abo
 
 The director, {\bf Ogitsu} (0.25FTE), oversaw all activities and communicated with the members assisting redirecting effort, for instance, of the activities impacted by the pandemic.
 
-{\small\color{red}
-\begin{itemize}
-    \item Describe how the project has established a unique identity and common vision, ensured research focus, and encouraged participation of all members (PIs, technical staff, postdocs, students).
-    \item Provide details of the overall management structure including roles and responsibilities, strategic planning, decision-making processes, and mechanisms for bringing new ideas into the research.
-    \item Describe how this structure has enhanced synergy across the research activities and participating institutions.
-    \item Describe policies and procedures for communication and information sharing within the project and how they have fostered and enhanced collaboration and synergy.
-    \item Describe how any advisory committee(s) are engaged by the leadership for the benefit of the research.
-    
-\end{itemize}
-}
+
 
 \clearpage
 
