--- a/npneq-master.bib
+++ b/npneq-master.bib
@@ -2,6 +2,215 @@
 
 %AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 
+@article{cooley1965,
+  title={An algorithm for the machine calculation of complex Fourier series},
+  author={Cooley, James W and Tukey, John W},
+  journal={Mathematics of computation},
+  volume={19},
+  number={90},
+  pages={297--301},
+  year={1965},
+  publisher={JSTOR}
+}
+
+@article{Martin1988,
+  title = {Diagonalization of large matrices in pseudopotential band-structure calculations: Dual-space formalism},
+  author = {Martins, Jos\'e Lu\'{\i}s and Cohen, Marvin L.},
+  journal = {Phys. Rev. B},
+  volume = {37},
+  issue = {11},
+  pages = {6134--6138},
+  numpages = {0},
+  year = {1988},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.37.6134},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.37.6134}
+}
+
+@article{RungeGross1984,
+  title = {Density-Functional Theory for Time-Dependent Systems},
+  author = {Runge, Erich and Gross, E. K. U.},
+  journal = {Phys. Rev. Lett.},
+  volume = {52},
+  issue = {12},
+  pages = {997--1000},
+  numpages = {0},
+  year = {1984},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.52.997},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.52.997}
+}
+
+
+@article{NWChem2013,
+  title={Noniterative multireference coupled cluster methods on heterogeneous CPU--GPU systems},
+  author={Bhaskaran-Nair, Kiran and Ma, Wenjing and Krishnamoorthy, Sriram and Villa, Oreste and van Dam, Hubertus JJ and Aprà, Edoardo and Kowalski, Karol},
+  journal={Journal of chemical theory and computation},
+  volume={9},
+  number={4},
+  pages={1949--1957},
+  year={2013},
+  publisher={ACS Publications}
+}
+
+@article{BigDFT2018,
+	doi = {10.1088/1361-648x/aaa8c9},
+	url = {https://doi.org/10.1088/1361-648x/aaa8c9},
+	year = 2018,
+	month = {feb},
+	publisher = {{IOP} Publishing},
+	volume = {30},
+	number = {9},
+	pages = {095901},
+	author = {Laura E Ratcliff and A Degomme and Jos{\'{e}} A Flores-Livas and Stefan Goedecker and Luigi Genovese},
+	title = {Affordable and accurate large-scale hybrid-functional calculations on {GPU}-accelerated supercomputers},
+	journal = {Journal of Physics: Condensed Matter},
+	abstract = {Performing high accuracy hybrid functional calculations for condensed matter systems containing a large number of atoms is at present computationally very demanding or even out of reach if high quality basis sets are used. We present a highly optimized multiple graphics processing unit implementation of the exact exchange operator which allows one to perform fast hybrid functional density-functional theory (DFT) calculations with systematic basis sets without additional approximations for up to a thousand atoms. With this method hybrid DFT calculations of high quality become accessible on state-of-the-art supercomputers within a time-to-solution that is of the same order of magnitude as traditional semilocal-GGA functionals. The method is implemented in a portable open-source library.}
+}
+
+@article{vasp2012,
+  title={VASP on a GPU: Application to exact-exchange calculations of the stability of elemental boron},
+  author={Hutchinson, Maxwell and Widom, Michael},
+  journal={Computer Physics Communications},
+  volume={183},
+  number={7},
+  pages={1422--1426},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{vasp2012b,
+  title={Accelerating VASP electronic structure calculations using graphic processing units},
+  author={Hacene, Mohamed and Anciaux-Sedrakian, Ani and Rozanska, Xavier and Klahr, Diego and Guignon, Thomas and Fleurat-Lessard, Paul},
+  journal={Journal of computational chemistry},
+  volume={33},
+  number={32},
+  pages={2581--2589},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+
+@article{vasp2019,
+  title={VASP hits the memory wall: Processors efficiency comparison},
+  author={Stegailov, Vladimir and Smirnov, Grigory and Vecher, Vyacheslav},
+  journal={Concurrency and Computation: Practice and Experience},
+  volume={31},
+  number={19},
+  pages={e5136},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{vasp2018,
+  title={Strategies to accelerate VASP with GPUs using open ACC},
+  author={Maintz, Stefan and Wetzstein, Markus},
+  booktitle={Proceedings of the Cray User Group},
+  year={2018}
+}
+
+@inproceedings{QE2017,
+  title={A performance study of Quantum ESPRESSO’s PWscf code on multi-core and GPU systems},
+  author={Romero, Joshua and Phillips, Everett and Ruetsch, Gregory and Fatica, Massimiliano and Spiga, Filippo and Giannozzi, Paolo},
+  booktitle={International Workshop on Performance Modeling, Benchmarking and Simulation of High Performance Computer Systems},
+  pages={67--87},
+  year={2017},
+  organization={Springer}
+}
+
+@article{QE2020,
+  title={Quantum ESPRESSO toward the exascale},
+  author={Giannozzi, Paolo and Baseggio, Oscar and Bonf{\`a}, Pietro and Brunato, Davide and Car, Roberto and Carnimeo, Ivan and Cavazzoni, Carlo and De Gironcoli, Stefano and Delugas, Pietro and Ferrari Ruffino, Fabrizio and others},
+  journal={The Journal of chemical physics},
+  volume={152},
+  number={15},
+  pages={154105},
+  year={2020},
+  publisher={AIP Publishing LLC}
+}
+
+@article{andrade2012time,
+  title={Time-dependent density-functional theory in massively parallel computer architectures: the octopus project},
+  author={Andrade, Xavier and Alberdi-Rodriguez, Joseba and Strubbe, David A and Oliveira, Micael JT and Nogueira, Fernando and Castro, Alberto and Muguerza, Javier and Arruabarrena, Agustin and Louie, Steven G and Aspuru-Guzik, Al{\'a}n and others},
+  journal={Journal of Physics: Condensed Matter},
+  volume={24},
+  number={23},
+  pages={233202},
+  year={2012},
+  publisher={IOP Publishing}
+}
+
+@article{andrade2013real,
+  title={Real-space density functional theory on graphical processing units: computational approach and comparison to gaussian basis set methods},
+  author={Andrade, Xavier and Aspuru-Guzik, Al{\'a}n},
+  journal={Journal of chemical theory and computation},
+  volume={9},
+  number={10},
+  pages={4360--4373},
+  year={2013},
+  publisher={ACS Publications}
+}
+
+@article{SparcX2021,
+title = {SPARC: Simulation Package for Ab-initio Real-space Calculations},
+journal = {SoftwareX},
+volume = {15},
+pages = {100709},
+year = {2021},
+issn = {2352-7110},
+doi = {https://doi.org/10.1016/j.softx.2021.100709},
+url = {https://www.sciencedirect.com/science/article/pii/S2352711021000546},
+author = {Qimen Xu and Abhiraj Sharma and Benjamin Comer and Hua Huang and Edmond Chow and Andrew J. Medford and John E. Pask and Phanish Suryanarayana},
+keywords = {Kohn–Sham, Density functional theory, Electronic structure, Real-space, Finite-differences},
+abstract = {We present SPARC: Simulation Package for Ab-initio Real-space Calculations. SPARC can perform Kohn–Sham density functional theory calculations for isolated systems such as molecules as well as extended systems such as crystals and surfaces, in both static and dynamic settings. It is straightforward to install/use and highly competitive with state-of-the-art planewave codes, demonstrating comparable performance on a small number of processors and increasing advantages as the number of processors grows. Notably, SPARC brings solution times down to a few seconds for systems with O(100–500) atoms on large-scale parallel computers, outperforming planewave counterparts by an order of magnitude and more.}
+}
+
+@InProceedings{heFFTe2020,
+author="Ayala, Alan
+and Tomov, Stanimire
+and Haidar, Azzam
+and Dongarra, Jack",
+editor="Krzhizhanovskaya, Valeria V.
+and Z{\'a}vodszky, G{\'a}bor
+and Lees, Michael H.
+and Dongarra, Jack J.
+and Sloot, Peter M. A.
+and Brissos, S{\'e}rgio
+and Teixeira, Jo{\~a}o",
+title="heFFTe: Highly Efficient FFT for Exascale",
+booktitle="Computational Science -- ICCS 2020",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="262--275",
+abstract="Exascale computing aspires to meet the increasing demands from large scientific applications. Software targeting exascale is typically designed for heterogeneous architectures; henceforth, it is not only important to develop well-designed software, but also make it aware of the hardware architecture and efficiently exploit its power. Currently, several and diverse applications, such as those part of the Exascale Computing Project (ECP) in the United States, rely on efficient computation of the Fast Fourier Transform (FFT). In this context, we present the design and implementation of heFFTe (Highly Efficient FFT for Exascale) library, which targets the upcoming exascale supercomputers. We provide highly (linearly) scalable GPU kernels that achieve more than {\$}{\$}40{\{}{\backslash}times {\}}{\$}{\$}speedup with respect to local kernels from CPU state-of-the-art libraries, and over {\$}{\$}2{\{}{\backslash}times {\}}{\$}{\$}speedup for the whole FFT computation. A communication model for parallel FFTs is also provided to analyze the bottleneck for large-scale problems. We show experiments obtained on Summit supercomputer at Oak Ridge National Laboratory, using up to 24,576 IBM Power9 cores and 6,144 NVIDIA V-100 GPUs.",
+isbn="978-3-030-50371-0"
+}
+
+@misc{andrade2021inq,
+      title={INQ, a modern GPU-accelerated computational framework for (time-dependent) density functional theory}, 
+      author={Xavier Andrade and Chaitanya Das Pemmaraju and Alexey Kartsev and Jun Xiao and Aaron Lindenberg and Sangeeta Rajpurohit and Liang Z. Tan and Tadashi Ogitsu and Alfredo A. Correa},
+      year={2021},
+      eprint={2106.03872},
+      archivePrefix={arXiv},
+      primaryClass={cond-mat.mtrl-sci}
+}
+
+@article{Abramovitch2021,
+	title = {Carrier localization induced by dynamic disorder in {MAPbI3} described by first-principles based tight binding},
+	url = {http://arxiv.org/abs/2105.06525},
+	abstract = {Halide perovskites are strongly influenced by large amplitude anharmonic lattice fluctuations at room temperature. We develop a tight binding model for dynamically disordered MAPbI\$\_3\$ based on density functional theory (DFT) calculations to calculate electronic structure for finite temperature crystal structures at the length scale of thermal disorder and carrier localization. The model predicts individual Hamiltonian matrix elements and band structures with high accuracy, owing to the inclusion of additional matrix elements and descriptors for non-Coulombic interactions. We apply the model to electronic structure calculations in supercells up to 16 \${\textbackslash}times\$ 16 \${\textbackslash}times\$ 16, observing the onset of carrier localization induced by thermal disorder at 300 K, associated with decreasing band edge fluctuations, increasing carrier mass, and Rashba splitting approaching zero. We identify the length scale \$L{\textasciicircum}*= 5\$ nm at which local electronic structure is affected by dynamic disorder.},
+	urldate = {2021-05-28},
+	journal = {arXiv:2105.06525 [cond-mat]},
+	author = {Abramovitch, David J. and Saidi, Wissam A. and Tan, Liang Z.},
+	month = may,
+	year = {2021},
+	note = {arXiv: 2105.06525},
+	keywords = {Condensed Matter - Materials Science}
+}
+
 @book{Anderson1999,
 AUTHOR = {Anderson, E. and Bai, Z. and Bischof, C. and
 Blackford, S. and Demmel, J. and Dongarra, J. and
@@ -297,6 +506,26 @@ doi = {10.1063/5.0004997}
   journal = {Annalen der Physik}
 }
 
+@article{Beyerlein2018,
+	title = {Time-spliced {X}-ray diffraction imaging of magnetism dynamics in a {NdNiO3} thin film},
+	volume = {115},
+	copyright = {© 2018 . http://www.pnas.org/site/aboutpnas/licenses.xhtmlPublished under the PNAS license.},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/115/9/2044},
+	doi = {10.1073/pnas.1716160115},
+	language = {en},
+	number = {9},
+	urldate = {2021-06-11},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Beyerlein, Kenneth R.},
+	month = feb,
+	year = {2018},
+	pmid = {29440492},
+	note = {Publisher: National Academy of Sciences
+Section: Physical Sciences},
+	keywords = {antiferromagnetism, coherent X-ray diffraction imaging, midinfrared laser, oxide heterostructure, resonant X-ray diffraction},
+	pages = {2044--2048}
+}
 @article{Biagini2019,
   title={Are Gaming-Enabled Graphic Processing Unit Cards Convenient for Molecular Dynamics Simulation?},
   author={Biagini, Tommaso and Petrizzelli, Francesco and Truglio, Mauro and Cespa, Roberto and Barbieri, Alessandro and Capocefalo, Daniele and Castellana, Stefano and Tevy, Maria Florencia and Carella, Massimo and Mazza, Tommaso},
@@ -451,7 +680,18 @@ eprint = {https://doi.org/10.1080/14786441308634955}
  title = {Fast hybrid density-functional computations using plane-wave basis sets},
  journal = {Electronic Structure},
 }
-
+@article{Caro2015,
+  doi = {10.1103/physrevb.92.144309},
+  url = {https://doi.org/10.1103/physrevb.92.144309},
+  year = {2015},
+  month = oct,
+  publisher = {American Physical Society ({APS})},
+  volume = {92},
+  number = {14},
+  author = {A. Caro and A. A. Correa and A. Tamm and G. D. Samolyuk and G. M. Stocks},
+  title = {Adequacy of damped dynamics to represent the electron-phonon interaction in solids},
+  journal = {Physical Review B}
+}
 @article{CarterEdwards2014,
   title = "Kokkos: Enabling manycore performance portability through polymorphic memory access patterns ",
   journal = "Journal of Parallel and Distributed Computing ",
@@ -879,7 +1119,20 @@ eprint = {https://doi.org/10.1080/14786441308634955}
  volume = {21},
  year = {2009}
 }
-
+@article{Giovannetti2009,
+	title = {Multiferroicity in {Rare}-{Earth} {Nickelates} \${R}\{{\textbackslash}mathrm\{{NiO}\}\}\_\{3\}\$},
+	volume = {103},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.103.156401},
+	doi = {10.1103/PhysRevLett.103.156401},
+	number = {15},
+	urldate = {2021-05-14},
+	journal = {Physical Review Letters},
+	author = {Giovannetti, Gianluca and Kumar, Sanjeev and Khomskii, Daniel and Picozzi, Silvia and van den Brink, Jeroen},
+	month = oct,
+	year = {2009},
+	note = {Publisher: American Physical Society},
+	pages = {156401}
+}
 
 @article{Gomez2018,
   title={Propagators for the time-dependent Kohn--Sham equations: Multistep, Runge--Kutta, exponential Runge--Kutta, and commutator free magnus methods},
@@ -1025,7 +1278,24 @@ eprint = {https://doi.org/10.1080/14786441308634955}
  year={2013},
  publisher={APS}
 }
-
+@article{Hampel2017,
+abstract = {We present a systematic density functional theory (DFT) plus Hubbard U study of structural trends and the stability of different magnetically ordered states across the rare-earth nickelate series, RNiO3, with R from Lu to La. In particular, we investigate how the magnetic order, the change of the rare-earth ion, and the Hubbard interaction U are affecting the bond-length disproportionation between the nickel sites. Our results show that structural parameters can be obtained that are in very good agreement with present experimental data and that DFT+U is in principle able to capture the most important structural trends across the nickelate series. However, the amplitude of the bond-length disproportionation depends very strongly on the specific value used for the Hubbard U parameter and also on the type of magnetic order imposed in the calculation. Regarding the relative stability of different magnetic orderings, a realistic antiferromagnetic order, consistent with the experimental observations, is favored for small U values and becomes more and more favorable compared to the ferromagnetic state towards the end of the series (i.e., towards R=Pr). Nevertheless, it seems that the stability of the ferromagnetic state is generally overestimated within the DFT+U calculations. Our work provides a profound starting point for more detailed experimental investigations and also for future studies using more advanced computational techniques such as, e.g., DFT combined with dynamical mean-field theory.},
+archivePrefix = {arXiv},
+arxivId = {1707.02161},
+author = {Hampel, Alexander and Ederer, Claude},
+doi = {10.1103/PhysRevB.96.165130},
+eprint = {1707.02161},
+issn = {24699969},
+journal = {Physical Review B},
+month = {oct},
+number = {16},
+pages = {165130},
+publisher = {American Physical Society},
+title = {{Interplay between breathing mode distortion and magnetic order in rare-earth nickelates RNiO3 within DFT+U}},
+url = {https://journals.aps.org/prb/abstract/10.1103/PhysRevB.96.165130},
+volume = {96},
+year = {2017}
+}
 @article{Harris2007,
  title={Optimizing parallel reduction in CUDA},
  author={Harris, Mark and others},
@@ -1643,6 +1913,24 @@ year = {2018}
  eprint = {https://science.sciencemag.org/content/346/6208/445.full.pdf},
  journal = {Science}
 }
+@article{Mostofi2008,
+abstract = {We present wannier90, a program for calculating maximally-localised Wannier functions (MLWF) from a set of Bloch energy bands that may or may not be attached to or mixed with other bands. The formalism works by minimising the total spread of the MLWF in real space. This is done in the space of unitary matrices that describe rotations of the Bloch bands at each k-point. As a result, wannier90 is independent of the basis set used in the underlying calculation to obtain the Bloch states. Therefore, it may be interfaced straightforwardly to any electronic structure code. The locality of MLWF can be exploited to compute band-structure, density of states and Fermi surfaces at modest computational cost. Furthermore, wannier90 is able to output MLWF for visualisation and other post-processing purposes. Wannier functions are already used in a wide variety of applications. These include analysis of chemical bonding in real space; calculation of dielectric properties via the modern theory of polarisation; and as an accurate and minimal basis set in the construction of model Hamiltonians for large-scale systems, in linear-scaling quantum Monte Carlo calculations, and for efficient computation of material properties, such as the anomalous Hall coefficient. wannier90 is freely available under the GNU General Public License from http://www.wannier.org/. Program summary: Program title: wannier90. Catalogue identifier: AEAK{\_}v1{\_}0. Program summary URL: http://cpc.cs.qub.ac.uk/summaries/AEAK{\_}v1{\_}0.html. Program obtainable from: CPC Program Library, Queen's University, Belfast, N. Ireland. Licensing provisions: Standard CPC licence, http://cpc.cs.qub.ac.uk/licence/licence.html. No. of lines in distributed program, including test data, etc.: 556 495. No. of bytes in distributed program, including test data, etc.: 5 709 419. Distribution format: tar.gz. Programming language: Fortran 90, perl. Computer: any architecture with a Fortran 90 compiler. Operating system: Linux, Windows, Solaris, AIX, Tru64 Unix, OSX. RAM: 10 MB. Word size: 32 or 64. Classification: 7.3. External routines: •BLAS (http://www/netlib.org/blas).•LAPACK (http://www.netlib.org/lapack). Both available under open-source licenses. Nature of problem: Obtaining maximally-localised Wannier functions from a set of Bloch energy bands that may or may not be entangled. Solution method: In the case of entangled bands, the optimally-connected subspace of interest is determined by minimising a functional which measures the subspace dispersion across the Brillouin zone. The maximally-localised Wannier functions within this subspace are obtained by subsequent minimisation of a functional that represents the total spread of the Wannier functions in real space. For the case of isolated energy bands only the second step of the procedure is required. Unusual features: Simple and user-friendly input system. Wannier functions and interpolated band structure output in a variety of file formats for visualisation. Running time: Test cases take 1 minute. References: [1] N. Marzari, D. Vanderbilt, Maximally localized generalized Wannier functions for composite energy bands, Phys. Rev. B 56 (1997) 12847.[2] I. Souza, N. Marzari, D. Vanderbilt, Maximally localized Wannier functions for entangled energy bands, Phys. Rev. B 65 (2001) 035109. {\textcopyright} 2007 Elsevier B.V. All rights reserved.},
+archivePrefix = {arXiv},
+arxivId = {0708.0650},
+author = {Mostofi, Arash A. and Yates, Jonathan R. and Lee, Young Su and Souza, Ivo and Vanderbilt, David and Marzari, Nicola},
+doi = {10.1016/j.cpc.2007.11.016},
+eprint = {0708.0650},
+issn = {00104655},
+journal = {Computer Physics Communications},
+keywords = {Density-functional theory,Electronic structure,Wannier function},
+month = {may},
+number = {9},
+pages = {685--699},
+publisher = {North-Holland},
+title = {{wannier90: A tool for obtaining maximally-localised Wannier functions}},
+volume = {178},
+year = {2008}
+}
 
 @article{Muller2020,
   title={Extending solid-state calculations to ultra-long-range length scales},
@@ -1862,7 +2150,23 @@ year = {2018}
 }
 
 %QQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQ
-
+@misc{Qiao2020,
+abstract = {Perovskite solar cells have attracted intense attention over the past decade because of their low cost, abundant raw materials, and rapidly growing power conversion efficiency (PCE). However, nonradiative charge carrier losses still constitute a major factor limiting the PCE to well below the Shockley-Queisser limit. This Perspective summarizes recent atomistic quantum dynamics studies on the photoinduced excited-state processes in metal halide perovskites (MHPs), including both hybrid organic-inorganic and all-inorganic MHPs and three- and two-dimensional MHPs. The simulations, performed using a combination of time-domain ab initio density functional theory and nonadiabatic molecular dynamics, allow emphasis on various intrinsic and extrinsic features, such as components, structure, dimensionality and interface engineering, control and exposure to various environmental factors, defects, surfaces, and their passivation. The detailed atomistic simulations advance our understanding of electron-vibrational dynamics in MHPs and provide valuable guidelines for enhancing the performance of perovskite solar cells.},
+author = {Qiao, Lu and Fang, Wei Hai and Long, Run and Prezhdo, Oleg V.},
+booktitle = {Journal of Physical Chemistry Letters},
+doi = {10.1021/acs.jpclett.0c01687},
+file = {:Users/dasc/Library/Application Support/Mendeley Desktop/Downloaded/Qiao et al. - 2020 - Photoinduced Dynamics of Charge Carriers in Metal Halide Perovskites from an Atomistic Perspective.pdf:pdf},
+issn = {19487185},
+month = {sep},
+number = {17},
+pages = {7066--7082},
+pmid = {32787332},
+publisher = {American Chemical Society},
+title = {{Photoinduced Dynamics of Charge Carriers in Metal Halide Perovskites from an Atomistic Perspective}},
+url = {https://dx.doi.org/10.1021/acs.jpclett.0c01687},
+volume = {11},
+year = {2020}
+}
 @article{Quashie2016,
  doi = {10.1103/physrevb.94.155403},
  url = {https://doi.org/10.1103/physrevb.94.155403},
@@ -2570,6 +2874,26 @@ archivePrefix = {arXiv},
  volume = {85},
  year = {2012}
 }
+@article{Yost2019,
+abstract = {Real-time, time-dependent density functional theory (RT-TDDFT) has gained popularity as a first-principles approach to study a variety of excited-state phenomena such as optical excitations and electronic stopping. Within RT-TDDFT simulations, the gauge freedom of the time-dependent electronic orbitals can be exploited for numerical and scientific convenience while the unitary transformation does not alter physical properties calculated from the quantum dynamics of electrons. Exploiting this gauge freedom, we demonstrate the propagation of maximally localized Wannier functions within RT-TDDFT. We illustrate its great utility through a number of examples including its application to optical excitation in extended systems using the so-called length gauge, interpreting electronic stopping excitation, and simulating electric field-driven quantized charge transport. We implemented the approach within our plane-wave pseudopotential RT-TDDFT module of the QB@LL code, and the performance of the implementation is also discussed.},
+archivePrefix = {arXiv},
+arxivId = {1903.05081},
+author = {Yost, DIllon C. and Yao, Yi and Kanai, Yosuke},
+doi = {10.1063/1.5095631},
+eprint = {1903.05081},
+issn = {00219606},
+journal = {Journal of Chemical Physics},
+keywords = {Wannier functions,ab initio calculations,density functional theory,localised states,molecule-photon collisions,photoexcitation,pseudopotential methods},
+month = {may},
+number = {19},
+pages = {194113},
+pmid = {31117778},
+publisher = {American Institute of Physics Inc.},
+title = {{Propagation of maximally localized Wannier functions in real-time TDDFT}},
+url = {https://aip.scitation.org/doi/abs/10.1063/1.5095631},
+volume = {150},
+year = {2019}
+}
 %ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ
 
 @Book{Ziegler1985,
@@ -2611,3 +2935,72 @@ archivePrefix = {arXiv},
 
 %PLEASE PUT REFERENCES ALPHABETICALLY
 
+@article{Xiao_2020,
+	doi = {10.1038/s41567-020-0947-0},
+	url = {https://doi.org/10.1038\%2Fs41567-020-0947-0},
+	year = 2020,
+	month = {jun},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {16},
+	number = {10},
+	pages = {1028--1034},
+	author = {Jun Xiao and Ying Wang and Hua Wang and C. D. Pemmaraju and Siqi Wang and Philipp Muscher and Edbert J. Sie and Clara M. Nyby and Thomas P. Devereaux and Xiaofeng Qian and Xiang Zhang and Aaron M. Lindenberg},
+	title = {Berry curvature memory through electrically driven stacking transitions},
+	journal = {Nature Physics}
+}
+
+@article{Quashie2020,
+    title = {Effect of chemical disorder on the electronic stopping of solid solution alloys},
+    journal = {Acta Materialia},
+    volume = {196},
+    pages = {576-583},
+    year = {2020},
+    issn = {1359-6454},
+    doi = {https://doi.org/10.1016/j.actamat.2020.06.061},
+    url = {https://www.sciencedirect.com/science/article/pii/S1359645420304961},
+author = {Edwin E. Quashie and Rafi Ullah and Xavier Andrade and Alfredo A. Correa},
+}
+
+@article{Smart2021,
+    title = {Enhancing Defect Tolerance with Ligands at the Surface of Lead Halide Perovskites},
+    journal = {J. Phys. Chem. Lett.},
+    year = {submitted},
+    author = {Tyler J. Smart and Hiroyuki Takenaka and Tuan Anh Pham and Liang Z. Tan and Jin Z. Zhang and Tadashi Ogitsu and Yuan Ping}
+}
+
+@article{Caro2015,
+  title = {Adequacy of damped dynamics to represent the electron-phonon interaction in solids},
+  author = {Caro, A. and Correa, A. A. and Tamm, A. and Samolyuk, G. D. and Stocks, G. M.},
+  journal = {Phys. Rev. B},
+  volume = {92},
+  issue = {14},
+  pages = {144309},
+  numpages = {7},
+  year = {2015},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.92.144309},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.92.144309}
+}
+
+@article{Yost2019,
+  title={First-Principles Modeling of Electronic Stopping in Complex Matter under Ion Irradiation},
+  author={Yost, Dillon C and Yao, Yi and Kanai, Yosuke},
+  journal={The journal of physical chemistry letters},
+  volume={11},
+  number={1},
+  pages={229--237},
+  year={2019},
+  publisher={ACS Publications}
+}
+
+@article{Qiao2020,
+  title={Extending carrier lifetimes in lead halide perovskites with alkali metals by passivating and eliminating halide interstitial defects},
+  author={Qiao, Lu and Fang, Wei-Hai and Long, Run and Prezhdo, Oleg V},
+  journal={Angewandte Chemie International Edition},
+  volume={59},
+  number={12},
+  pages={4684--4690},
+  year={2020},
+  publisher={Wiley Online Library}
+}
