--- a/publications.tex
+++ b/publications.tex
@@ -1,14 +1,7 @@
 \section{Publications, September 2019-Present}
 \label{sec:publications}
 
-\textcolor{red}{make sure to exclude the one Matthias said out of scope}
-
-\textcolor{red}{
-Sorted by publication date. Include those that have been published, accepted or submitted. Do not include any which are “in preparation”. 
-For the latter case, a brief description of the portion of the work that was supported by this FWP should be provided with the full acknowledgment, if this information is not obvious from the acknowledgment. {\bf Publications that are not supported by this project or directly attributed to this project shall NOT be included.}}
-
 \subsection{A-type}
-
 Publications that were \underline{solely supported by this project} and \underline{those in collaboration with others that} \underline{are based on work which was intellectually driven by this project}.
 \begin{enumerate}
     \item \textcolor{blue}{Xavier Andrade}, \textcolor{blue}{Chaitanya Das Pemmaraju}, {\bf Alexy Kartsev}, \textcolor{blue}{Liang Z. Tan}, {\bf Sangeeta Rajpurohit}, {\bf Jun Xiao},  \textcolor{blue}{Aaron Lindenberg}, \textcolor{blue}{Tadashi Ogitsu}, and \textcolor{blue}{Alfredo Correa}, "INQ, a modern GPU-accelerated computational framework for (time-dependent) density functional theory", submitted on June 7, \url{https://arxiv.org/abs/2106.03872}.
@@ -20,12 +13,13 @@ Publications that were \underline{solely supported by this project} and \underli
 
 Collaborative publications jointly supported by this project and other programs or agencies.
 
-\textcolor{red}{For the latter case, a brief description of the portion of the work that was supported by this FWP should be provided with the full acknowledgment, if this information is not obvious from the acknowledgment. {\bf Publications that are not supported by this project or directly attributed to this project shall NOT be included.}}
 
 \begin{enumerate}
-    \item \textcolor{red}{* confirm not out of scope} Jorge Kohanoff, \textcolor{blue}{Alfredo Correa}, Gleb Gribakin, Conrad Johnston, Andr\'{e}s Sa\'{u}l, "Radioactive decay of $^{60}$Sr in cement: a non-equilibrium first-principles investigation", submitted in May 2021.\\
+    \item Jorge Kohanoff, \textcolor{blue}{Alfredo Correa}, Gleb Gribakin, Conrad Johnston, Andr\'{e}s Sa\'{u}l, "Radioactive decay of $^{60}$Sr in cement: a non-equilibrium first-principles investigation", submitted in May 2021.\\
     (Note: The Qball TDDFT code was used to calculate the electronic shake-off process of nuclear decay in a solid for the first time.)
+
     \item Khalid M. Siddiqui1, Daniel B. Durham, Frederick Cropp, Colin Ophus, {\bf Sangeeta Rajpurohit}, Yanglin Zhu, Johan D. Carlstr\"{o}m, Camille Stavrakas, Zhiqiang Mao, Archana Raja, Pietro Musumeci, \textcolor{blue}{Liang Z. Tan}, Andrew M. Minor, Daniele Filippetto, and Robert A. Kaindl, "Ultrafast optical melting of trimer superstructure in layered 1T’-TaTe2" submitted.  arXiv:2009.02891
+
     \item Edbert J. Sie, Clara M. Nyby, \textcolor{blue}{C. D. Pemmaraju}, Christina A. C. Garcia11, Yaxian Wang11, Burak Guzelturk6, Chenyi Xia, {\bf Jun Xiao}, Andrey Poletayev, B. K. Ofori-Okai, Matthias C. Hoffmann, Su Ji Park, Xiaozhe Shen, Jie Yang, Renkai Li, Alexander H. Reid, Stephen Weathersby, Philipp Muscher, Nathan Finney, Daniel Rhodes, Luis Balicas, James Hone, William Chueh, Thomas P. Devereaux, Prineha Narang,Tony F. Heinz, Xijie Wang, \textcolor{blue}{Aaron M. Lindenberg}, "Ultrathin Terahertz Waveplate using an Anisotropic Semimetal" under review.
     
     \item Ming-Fu Lin, Narendra Singh, Shujia Liang, Mianzhen Mo, Pedro Nunes, Kathryn Ledbetter, Jie Yang, Michael Kozina, Stephen Weathersby, Xiaozhe Shen, Amy Cordones-Hahn, Thomas Wolf, Kelly Gaffney, \textcolor{blue}{C. D. Pemmaraju}, Matthias Ihme, Xijie Wang, "Imaging the solvated hydronium cation and hydroxyl radical in the ionized liquid water", under review.
@@ -34,10 +28,9 @@ Collaborative publications jointly supported by this project and other programs 
 
     \item  {\bf Sangeeta Rajpurohit}, \textcolor{blue}{Liang Z. Tan},  Christian Jooss, and P. E. Bl\"ochl, , "Ultrafast spin-nematic and ferroelectric phase transitions induced by femtosecond light pulses", {\it Phys. Rev. B} {\bf 102}, 174430-6 (2020). Published on Nov 18, 2020.
 
-    \item \textcolor{red}{* confirm not out of scope} Edwin E. Quashie, Rafi Ullah, \textcolor{blue}{Xavier Andrade}, and \textcolor{blue}{Alfredo A. Correa}, "Effect of chemical disorder on the electronic stopping of solid solution alloys", {\it Acta Mater.} {\bf 196}, 576-583 (2020). Published on Sep 1, 2020.\\
+    \item Edwin E. Quashie, Rafi Ullah, \textcolor{blue}{Xavier Andrade}, and \textcolor{blue}{Alfredo A. Correa}, "Effect of chemical disorder on the electronic stopping of solid solution alloys", {\it Acta Mater.} {\bf 196}, 576-583 (2020). Published on Sep 1, 2020.\\
     (Note: The Qball TDDFT code was used to calculate full atomistic effects in the electronic-ion coupling and electronic response at extremely low ion velocities.)
         
-    %only a PD is involved so probably not qualified \item {\bf Sangeeta Rajpurohit}, Christian Jooss, and Peter E. Bl\"ochl,  "Evolution of the magnetic and polaronic order of ${\mathrm{Pr}}_{1/2}{\mathrm{Ca}}_{1/2}{\mathrm{MnO}}_{3}$ following an ultrashort light pulse", {\it Phys. Rev. B} {\bf 102}, 014302-23 (2020). Published Jul 2, 2020.
 
     \item {\bf Jun Xiao}, Ying Wang, Hua Wang, \textcolor{blue}{C. D. Pemmaraju}, Siqi Wang, Philipp Muscher, Edbert J. Sie, Clara M. Nyby, Thomas P. Devereaux, Xiaofeng Qian, Xiang Zhang and \textcolor{blue}{Aaron M. Lindenberg}, "Berry curvature memory through electrically driven stacking transitions", {\it Nature Physics} {\bf 16}, 1028-1034 (2020). Submitted on Dec 1, 2019, published online on June 29, 2020.
 
