--- a/budget.tex
+++ b/budget.tex
@@ -1,11 +1,5 @@
 \section{Budget And Staffing Tables}
 \label{sec:budget}
-\begin{itemize}
-    \item \textcolor{red}{Provide an update to Table 1 and Table 2 in your proposal. Table 1: Senior/Key personnel on the application and institutional affiliations and Table 2: Summary Budget information for all partner institutions. Add new Table 3: Budget by Task which summarizes the allocated/planned funding for the high-level research tasks (thrusts) by year. In the text for this section, refer readers to appendix B for additional information on staffing roles and student/postdoctoral participation.}
-    \item \textcolor{red}{Review criteria for Reasonableness and Appropriateness of the Proposed Budget: Comment on the appropriateness of the proposed budget and the distribution of the funds/staffing among research tasks/themes, software development, and PIs/institution (if applicable).
-}
-
-\end{itemize}
 
 
 \begin{table}[ht]
@@ -14,16 +8,16 @@
     \hline
         Last Name & First Name & Effort level & Role & Institution \\
         \hline
-        {\bf\textcolor{purple}{Ogitsu}} & {\bf\textcolor{purple}{Tadashi}} & \bf\textcolor{purple}{0.25FTE} & \bf\textcolor{purple}{Director} & LLNL \\
-        {\bf\textcolor{orange}{Correa}} & \bf\textcolor{orange}{Alfredo} & \bf\textcolor{orange}{0.5FTE} & \bf\color{orange} Software Design Lead & LLNL \\
-        \color{orange}Andrade & \color{orange}Xavier & \color{orange}0.5FTE &\color{orange}Software GPU Implementation & LLNL \\ \hline
-        \bf\color{red}Tan & \bf\color{red}Liang & \bf\color{red}0.04FTE & \bf\color{red} Interpretation Lead & LBNL \\
-        \color{red}Rajpurohit & \color{red}Sangeeta & \color{red}1.0 PD & \color{red}Interpretation & LBNL \\
-        \bf\color{pink}Prendergast & \bf\color{pink}David & \bf\color{pink}0.01FTE & \bf\color{pink}Advisor & LBNL \\ \hline
-        \bf\color{blue}Pemmeraju & \bf\color{blue}S. C. Das & \bf\color{blue}0.1FTE &\bf\color{blue}Validation Simulation Lead & SLAC \\
-        \color{blue}Kertzev & \color{blue}Alexey & \color{blue}0.975PD & \color{blue}Validation Simulation & SLAC\\
-        \bf\color{green}Lindenberg & \bf\color{green}Aaron & \bf\color{green}0.01FTE & \bf\color{green} Validation Experiment Lead & SLAC/Stanford \\
-        \color{green}Xiao & \color{green}Jun & \color{green}0.4625PD & \color{green}Validation Experiment & SLAC\\
+        Ogitsu & Tadashi & 0.25FTE & Director & LLNL \\
+        Correa & Alfredo & 0.5FTE & Software Design Lead & LLNL \\
+        Andrade & Xavier & 0.5FTE &Software GPU Implementation & LLNL \\ \hline
+        Tan & Liang & 0.04FTE &  Interpretation Lead & LBNL \\
+        Rajpurohit & Sangeeta & 1.0 PD & Interpretation & LBNL \\
+        Prendergast & David & 0.01FTE & Advisor & LBNL \\ \hline
+        Pemmeraju & S. C. Das & 0.1FTE & Validation Simulation Lead & SLAC \\
+        Kertzev & Alexey & 0.975PD & Validation Simulation & SLAC\\
+        Lindenberg & Aaron & 0.01FTE &  Validation Experiment Lead & SLAC/Stanford \\
+        Xiao & Jun & 0.4625PD & Validation Experiment & SLAC\\
         \hline
     \end{tabular}
     \caption{Senior/key personnel and institutional affiliation}
